cluster/apps/debug/whoami/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: debug
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
      app.kubernetes.io/name: whoami
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: whoami
        app.kubernetes.io/name: whoami
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: whoami
          image: ghcr.io/traefik/whoami:v1.12.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            tcpSocket:
              port: http
            failureThreshold: 30
            periodSeconds: 3
            timeoutSeconds: 1
          livenessProbe:
            tcpSocket:
              port: http
            failureThreshold: 3
            periodSeconds: 30
            timeoutSeconds: 3
          readinessProbe:
            tcpSocket:
              port: http
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
      restartPolicy: Always
      automountServiceAccountToken: false
