cluster/apps/debug/whoami/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: debug
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
  selector:
    app: whoami
    app.kubernetes.io/name: whoami
