cluster/apps/debug/whoami/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ${BASE_DOMAIN/./-}-sso
  namespace: debug
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: whoami
  oidc:
    provider:
      issuer: https://sso.${BASE_DOMAIN}/realms/hq
    clientID: envoy-primary
    clientSecret:
      name: ${BASE_DOMAIN/./-}-sso-client-secret
    passThroughAuthHeader: false
    forwardAccessToken: true
  jwt:
    providers:
      - name: whoami-sso
        issuer: https://sso.${BASE_DOMAIN}/realms/hq
        remoteJWKS:
          uri: https://sso.${BASE_DOMAIN}/realms/hq/protocol/openid-connect/certs
        extractFrom:
          headers:
            - name: Authorization
              valuePrefix: "Bearer "
        claimToHeaders:
          - claim: email
            header: X-Auth-Request-Email
